[gd_scene load_steps=10 format=2]

[ext_resource path="res://plane.gd" type="Script" id=1]
[ext_resource path="res://media/ui/walk.png" type="Texture" id=2]
[ext_resource path="res://media/ui/default_plane.png" type="Texture" id=3]
[ext_resource path="res://media/ui/head.png" type="Texture" id=4]
[ext_resource path="res://media/ui/close.png" type="Texture" id=5]
[ext_resource path="res://popupback.tres" type="StyleBox" id=6]
[ext_resource path="res://universal.tscn" type="PackedScene" id=7]
[ext_resource path="res://media/ui/new.png" type="Texture" id=8]
[ext_resource path="res://media/ui/blank_plane.png" type="Texture" id=9]

[node name="screen" type="Node"]
script = ExtResource( 1 )

[node name="Universal" parent="." instance=ExtResource( 7 )]

[node name="Plane" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -200.0
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -175.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="ToolButton" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 150.0
margin_bottom = 203.0
icon = ExtResource( 8 )

[node name="Dice" type="ToolButton" parent="VBoxContainer"]
margin_top = 207.0
margin_right = 150.0
margin_bottom = 343.0
icon = ExtResource( 2 )

[node name="Coin" type="ToolButton" parent="VBoxContainer"]
margin_top = 347.0
margin_right = 150.0
margin_bottom = 483.0
icon = ExtResource( 4 )

[node name="poolpop" type="PopupPanel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HSplitContainer" parent="poolpop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0
split_offset = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pzoom" type="TextureRect" parent="poolpop/HBoxContainer"]
margin_right = 698.0
margin_bottom = 580.0
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="poolpop/HBoxContainer"]
margin_left = 706.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 7
size_flags_vertical = 7
alignment = 1

[node name="p1" type="TextureButton" parent="poolpop/HBoxContainer/VBoxContainer"]
margin_right = 298.0
margin_bottom = 165.0
size_flags_horizontal = 7
size_flags_vertical = 7
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="p2" type="TextureButton" parent="poolpop/HBoxContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 298.0
margin_bottom = 334.0
size_flags_horizontal = 7
size_flags_vertical = 7
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="p3" type="TextureButton" parent="poolpop/HBoxContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 298.0
margin_bottom = 503.0
size_flags_horizontal = 7
size_flags_vertical = 7
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="poolpop/HBoxContainer/VBoxContainer"]
margin_top = 507.0
margin_right = 298.0
margin_bottom = 579.0
size_flags_horizontal = 7
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poolpopexit" type="ToolButton" parent="poolpop/HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 111.0
margin_right = 187.0
margin_bottom = 72.0
size_flags_horizontal = 7
size_flags_vertical = 7
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="VBoxContainer/Dice" to="." method="_on_Dice_pressed"]
[connection signal="pressed" from="VBoxContainer/Coin" to="." method="_on_Coin_pressed"]
[connection signal="pressed" from="poolpop/HBoxContainer/VBoxContainer/p1" to="." method="_on_p1_pressed"]
[connection signal="pressed" from="poolpop/HBoxContainer/VBoxContainer/p2" to="." method="_on_p2_pressed"]
[connection signal="pressed" from="poolpop/HBoxContainer/VBoxContainer/p3" to="." method="_on_p3_pressed"]
[connection signal="pressed" from="poolpop/HBoxContainer/VBoxContainer/CenterContainer/poolpopexit" to="." method="_on_poolpopexit_pressed"]
